--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,33 @@ authors = [
     {name = "Michael McNeil Forbes", email = "m.forbes+pwg@wsu.edu"},
 ]
 dependencies = [
+]
+requires-python = ">=3.9"
+license = {text = "MIT"}
+[project.optional-dependencies]
+test = [
     "pytest>=7.2.2",
     "pytest-cov>=4.0.0",
     "pytest-flake8>=1.1.1",
 ]
-requires-python = ">=3.9"
-license = {text = "MIT"}
+tools = [
+    "nox>=2022.11.21",
+    "pipx>=1.1.0",
+    "black>=23.1.0",
+    "flake8>=6.0.0",
+]
+presentation = [
+    "jupyter>=1.0.0",
+    "notebook>=6.5.2",
+    "jupytext>=1.14.5",
+    "RISE>=5.7.1",
+]
 
 
 [tool.pdm]
+[tool.pdm.dev-dependencies]
+dev = [
+    "pytest>=7.2.2",
+    "pytest-cov>=4.0.0",
+    "pytest-flake8>=1.1.1",
+]
