WIP: Working on README

--- a/Presentation/Makefile
+++ b/Presentation/Makefile
@@ -1,9 +1,9 @@
 clean:
 	-find . -name "__pycache__" -exec $(RM) -r {} +
 	-find . -name ".ipynb_checkpoints" -exec $(RM) -r {} +
-	-$(RM) -r coverage.xml htmlcov .coverage .pytest_cache
+	-$(RM) -r coverage.xml htmlcov .coverage .pytest_cache .ipynb_checkpoints
 
 realclean: clean
-	-$(RM) *.py pyproject.toml 1000.txt
+	-$(RM) -r .nox *.py *.toml *.txt
 
 .PHONY: clean realclean
